--- a/configurations/config.json
+++ b/configurations/config.json
@@ -6,7 +6,7 @@
   ],
   "email": "email@email.com",
   "sns_topic_name": "EC2Alerts",
-  "region": "us-east-1",
+  "region": "REGION",
   "stats": [
     "CPUUtilization",
     "NetworkIn",
